; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_network.c_network_accuracy.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_network.c_network_accuracy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @network_accuracy(i32* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_4__, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca float, align 4
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 0
  store i32 %1, i32* %7, align 4
  store i32* %0, i32** %4, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @network_predict_data(i32* %8, i32 %10)
  store i32 %11, i32* %5, align 4
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %5, align 4
  %15 = call float @matrix_topk_accuracy(i32 %13, i32 %14, i32 1)
  store float %15, float* %6, align 4
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @free_matrix(i32 %16)
  %18 = load float, float* %6, align 4
  ret float %18
}

declare dso_local i32 @network_predict_data(i32*, i32) #1

declare dso_local float @matrix_topk_accuracy(i32, i32, i32) #1

declare dso_local i32 @free_matrix(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
